tests/rosetta/out/Rust/average-loop-length.error
rustc error: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:48:30
   |
48 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
48 |         while (s.len() as i32) < width {
   |               +              +

error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:55:30
   |
55 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
55 |         while (s.len() as i32) < width {
   |               +              +

warning: unnecessary parentheses around assigned value
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:89:21
   |
89 |             term *= (i / nn);
   |                     ^      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
89 -             term *= (i / nn);
89 +             term *= i / nn;
   |

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:15:19
   |
15 |         return (x.parse::<i32>().unwrap()).parse::<f64>().unwrap();
   |                   ^^^^^ method not found in `f64`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:20:35
   |
20 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:20:31
   |
20 |             if &s[i as usize..i + 1 as usize] == ch {
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:20:33
   |
20 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:30:31
   |
30 |         let mut dot = indexOf(s, ".");
   |                       ------- ^ expected `&str`, found `String`
   |                       |
   |                       arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:17:8
   |
17 |     fn indexOf(s: &'static str, ch: &'static str) -> i32 {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
30 |         let mut dot = indexOf(&s, ".");
   |                               +

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:36:42
   |
36 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                          ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:36:36
   |
36 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                    ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:36:40
   |
36 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                        ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:36:21
   |
29 |         let mut s = y.to_string();
   |                     ------------- expected due to this value
...
36 |                 s = &s[0 as usize..dot + 5 as usize];
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |
help: try using a conversion method
   |
36 |                 s = (&s[0 as usize..dot + 5 as usize]).to_string();
   |                     +                                +++++++++++++

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:44:16
   |
27 |     fn fmtF(x: f64) -> &'static str {
   |                        ------------ expected `&'static str` because of return type
...
44 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
44 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:51:16
   |
46 |     fn padInt(n: i32, width: i32) -> &'static str {
   |                                      ------------ expected `&'static str` because of return type
...
51 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
51 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:56:17
   |
56 |             s = format!("{}{}", " ", s);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:81:21
   |
81 |         return (sum.parse::<f64>().unwrap()) / tests as f64;
   |                     ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
62 |         let mut sum: i32 = 0;
   |                    +++++

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:84:24
   |
84 |         let mut nn = n.parse::<f64>().unwrap();
   |                        ^^^^^ method not found in `i32`

warning: variable does not need to be mutable
   --> /tmp/TestMochiRustGoldenaverage-loop-length331379233/001/prog.rs:104:17
    |
104 | ...   let mut line = format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", padI...
    |           ----^^^^
    |           |
    |           help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

error: aborting due to 16 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0308, E0599, E0689.
For more information about an error, try `rustc --explain E0277`.
